--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,11 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <div class="container_pokemon">
-    <h3 class="title_pokemon">pokemon</h3>
-    <div class="container_img"><img src="./img/img.jpg"></div>
-    <div class="description_pokemon"><span class="type_pokemon">Type: </span><span class="type_pokemon">normal</span></div>
-  </div>
+  <main class="container">
+  </main>
+  <script src="./js/index.js"></script>
 </body>
+
 </html>
