Created pokemon search system Added pokemon results styles

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <body>
     <header class="header" id="header"></header>
     <div id="form"></div>
+    <div id="results"></div>
     <main class="container" id="Main"></main>
   </body>
 </html>
