Create infity scroller

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     <div id="form"></div>
     <div id="results"></div>
     <main class="container" id="Main"></main>
+    <div id="viewport"></div>
   </body>
 </html>
